fix(Checkbox): adjust alignment of label with control

--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -69,8 +69,16 @@
   position: relative;
 }
 
+.checkbox__label {
+  /* slight offset to improve alignment next to checkbox */
+  transform: translateY(-1px);
+}
+
 .checkbox__sub-label {
   display: block;
+
+  /* slight offset to improve alignment next to checkbox */
+  transform: translateY(-1px);
 
   color: light-dark(var(--eds-theme-color-text-utility-default-secondary), var(--eds-dark-theme-color-text-utility-default-secondary));
 }
